--- a/app/templates/_index.html
+++ b/app/templates/_index.html
@@ -6,7 +6,7 @@
 
     <title><%= appname %></title>
 
-    <link rel="stylesheet" type="text/css" href="css/styles.<%= _.clean(syntax) %>" />
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
 </head>
 <body>
     <table cellpadding="0" cellspacing="0" border="0" id="backgroundTable">
